# elefant

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  bunfig.toml  package.json
.elefant/: db.sqlite-shm  db.sqlite-wal
.goopspec/mcp-tools-support/: CHRONICLE.md  UI-WALKTHROUGH.md
bench/: run-spec-mode-bench.sh
desktop/: .gitignore  bunfig.toml  components.json  dev.sh  index.html  package.json  playwright.config.ts  test-setup.ts  tsconfig.json  vite.config.ts
desktop/public/: sw.js
desktop/src/: App.svelte  app.css  app.html  hugeicons.d.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/tests/: agent-profiles.spec.ts  btw-command.spec.ts  capture-ui.ts  desktop-spot.spec.ts  field-notes-chip.spec.ts  field-notes-keyboard.spec.ts  field-notes-mobile.spec.ts  field-notes-open-in-editor.spec.ts  field-notes-settings.spec.ts  field-notes-sidebar.spec.ts  field-notes-view.spec.ts  lsp-diagnostics-marker.spec.ts  mobile-audit-report.md  mobile-audit.spec.ts  mobile-regression.spec.ts  (+14 more)
docs/: agent-rich-viz.md  field-notes.md  hooks.md  markdown.md  research-base.md
mobile/: .gitignore  capacitor.config.ts  package.json
scripts/: generate-provider-registry.ts  install.sh  mcp-spike.ts  migrate-markdown-db.test.ts  migrate-markdown-db.ts  mobile-build.sh  mobile-deploy.sh  mobile-release.sh  provider-registry-supplement.ts  validate-agent-prompts.test.ts  validate-agent-prompts.ts
src/: index.ts
(+1106 files in other folders)
